--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -7,7 +7,7 @@
     tools:context="csuchico.smartnap.Alarm">
 
     <TimePicker
-        android:id="@+id/timePicker"
+        android:id="@+id/alarmTimePicker"
         android:layout_width="335dp"
         android:layout_height="263dp"
         android:timePickerMode="spinner"
@@ -15,15 +15,16 @@
         tools:layout_editor_absoluteY="96dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonCreateAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create"
+        android:onClick="onToggleClicked"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="407dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/headerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Alarm"
@@ -32,7 +33,7 @@
         tools:layout_editor_absoluteY="33dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/alarmInputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
