--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,45 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="csuchico.smartnap.Home">
+    tools:context="csuchico.smartnap.Home"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:id="@+id/NewAlarm"
-        android:layout_width="198dp"
-        android:layout_height="54dp"
-        android:text="Create New Alarm"
+        android:layout_width="404dp"
+        android:layout_height="62dp"
         android:onClick="Alarmsetup"
-        tools:layout_editor_absoluteX="185dp"
-        tools:layout_editor_absoluteY="-7dp" />
+        android:text="Create New Alarm"
+        tools:layout_editor_absoluteY="3dp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.444" />
 
-    <TextClock
-        android:id="@+id/CurrentAlarm"
-        android:layout_width="221dp"
-        android:layout_height="65dp"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="47dp" />
+    <LinearLayout
+        android:layout_width="378dp"
+        android:layout_height="515dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NewAlarm"
+        app:layout_constraintVertical_bias="0.6">
 
-    <Button
-        android:id="@+id/EditAlarm"
-        android:layout_width="186dp"
-        android:layout_height="58dp"
-        android:text="Edit"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-10dp" />
+        <TextClock
+            android:id="@+id/textClock"
+            android:layout_width="290dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="0.11"
+            android:textAlignment="center"
+            android:textSize="36sp" />
 
-    <Switch
-        android:id="@+id/AlarmSwitch"
-        android:layout_width="158dp"
-        android:layout_height="64dp"
-        android:checked="false"
-        android:showText="true"
-        android:splitTrack="false"
-        android:switchMinWidth="?attr/actionBarSize"
-        android:textColorLink="@color/colorPrimary"
-        tools:checked="false"
-        tools:layout_editor_absoluteX="225dp"
-        tools:layout_editor_absoluteY="47dp" />
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:layout_weight="0.23"
+            android:showText="true"
+            tools:checked="false" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
