--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,43 +6,82 @@
     android:layout_height="match_parent"
     tools:context="csuchico.smartnap.Home">
 
-    <Button
-        android:id="@+id/NewAlarm"
-        android:layout_width="198dp"
-        android:layout_height="54dp"
-        android:text="Create New Alarm"
-        android:onClick="Alarmsetup"
-        tools:layout_editor_absoluteX="185dp"
-        tools:layout_editor_absoluteY="-7dp" />
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
-    <TextClock
-        android:id="@+id/CurrentAlarm"
-        android:layout_width="221dp"
-        android:layout_height="65dp"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="47dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
-    <Button
-        android:id="@+id/EditAlarm"
-        android:layout_width="186dp"
-        android:layout_height="58dp"
-        android:text="Edit"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-10dp" />
+            <Button
+                android:id="@+id/NewAlarm"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_weight="1"
+                android:onClick="Alarmsetup"
+                android:text="Create New Alarm"
+                tools:layout_editor_absoluteX="185dp"
+                tools:layout_editor_absoluteY="-7dp" />
 
-    <Switch
-        android:id="@+id/AlarmSwitch"
-        android:layout_width="158dp"
-        android:layout_height="64dp"
-        android:checked="false"
-        android:showText="true"
-        android:splitTrack="false"
-        android:switchMinWidth="?attr/actionBarSize"
-        android:textColorLink="@color/colorPrimary"
-        tools:checked="false"
-        tools:layout_editor_absoluteX="225dp"
-        tools:layout_editor_absoluteY="47dp" />
+            <Button
+                android:id="@+id/EditAlarm"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:text="Edit"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="-10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextClock
+                        android:id="@+id/CurrentAlarm"
+                        android:layout_width="match_parent"
+                        android:layout_height="65dp"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="36sp"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="47dp" />
+
+                    <Switch
+                        android:id="@+id/AlarmSwitch"
+                        android:layout_width="79dp"
+                        android:layout_height="64dp"
+                        android:checked="false"
+                        android:showText="true"
+                        android:splitTrack="false"
+                        android:switchMinWidth="?attr/actionBarSize"
+                        android:textColorLink="@color/colorPrimary"
+                        tools:checked="false"
+                        tools:layout_editor_absoluteX="225dp"
+                        tools:layout_editor_absoluteY="47dp" />
+                </LinearLayout>
+            </ScrollView>
+
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
