--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -6,18 +6,12 @@
     android:layout_height="match_parent"
     tools:context="csuchico.smartnap.Alarm">
 
-    <TimePicker
-        android:id="@+id/alarmTimePicker"
-        android:layout_width="335dp"
-        android:layout_height="263dp"
-        android:timePickerMode="spinner"
-        android:visibility="visible"
-        android:layout_marginTop="62dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <TextView
             android:id="@+id/headerText"
@@ -25,28 +19,23 @@
             android:layout_height="wrap_content"
             android:text="Edit Alarm"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            tools:layout_editor_absoluteX="109dp"
+            android:textAlignment="center"
+            tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="33dp" />
 
-    <TextView
-        android:id="@+id/headerText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Alarm"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="33dp" />
-
-        <EditText
-            android:id="@+id/alarmInputText"
+        <TimePicker
+            android:id="@+id/alarmTimePicker"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Alarm text to display"
-            tools:layout_editor_absoluteX="85dp"
-            tools:layout_editor_absoluteY="336dp" />
+            android:layout_height="212dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:timePickerMode="spinner"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
 
         <Button
             android:id="@+id/buttonCreateAlarm"
@@ -54,8 +43,9 @@
             android:layout_height="wrap_content"
             android:onClick="onToggleClicked"
             android:text="Create"
-            tools:layout_editor_absoluteX="148dp"
+            tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="407dp" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
