--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -7,22 +7,52 @@
     tools:context="csuchico.smartnap.AlarmQuestions">
 
     <LinearLayout
-        android:layout_width="381dp"
-        android:layout_height="571dp"
-        android:orientation="vertical"
-        android:weightSum="1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_width="378dp"
+        android:layout_height="54dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="-7dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/linearLayout">
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/clear"
+            tools:ignore="ButtonStyle" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="229dp"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            tools:ignore="ButtonStyle" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="385dp"
+        android:layout_height="540dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="-41dp"
+        android:orientation="vertical"
+        android:weightSum="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout">
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Question"
+            android:text="@string/new_question"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <EditText
@@ -31,7 +61,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Class" />
+            android:text="@string/classid"
+            tools:ignore="LabelFor" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,14 +75,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="false"
-                android:text="True False" />
+                android:text="@string/true_false" />
 
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Multiple Choice" />
+                android:text="@string/multiple_choice" />
 
         </LinearLayout>
 
@@ -61,13 +92,14 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:text="Question?" />
+            android:text="@string/question"
+            tools:ignore="LabelFor" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="33dp"
-            android:text="Answer:"
+            android:text="@string/answer"
             android:textSize="18sp" />
 
         <TableLayout
@@ -91,7 +123,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="option1" />
+                    android:text="@string/option1"
+                    tools:ignore="LabelFor" />
 
             </TableRow>
 
@@ -111,7 +144,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="option2" />
+                    android:text="@string/option2"
+                    tools:ignore="LabelFor" />
 
             </TableRow>
 
@@ -130,7 +164,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="option3" />
+                    android:text="@string/option3"
+                    tools:ignore="LabelFor" />
             </TableRow>
 
             <TableRow
@@ -148,7 +183,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="option4" />
+                    android:text="@string/option4"
+                    tools:ignore="LabelFor" />
             </TableRow>
         </TableLayout>
 
@@ -162,39 +198,17 @@
                 android:id="@+id/radioButton21"
                 android:layout_width="194dp"
                 android:layout_height="59dp"
-                android:text="True"
+                android:text="@string/trueanswer"
                 android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/radioButton20"
                 android:layout_width="185dp"
                 android:layout_height="60dp"
-                android:text="False"
+                android:text="@string/falseanswer"
                 android:textSize="18sp" />
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="378dp"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="-7dp">
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Clear" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="229dp"
-            android:layout_height="wrap_content"
-            android:text="Save" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
