Fix for Issue #3 along with numerous other fixes... - The alarm is set appropriately to the background now, and activates on time - A sound notification is now playing as a ringtone (issue: if ringtone volume is silent, sound doesn't play) - A new fullscreen activity which displays the current time, as well as a button to silence alarm, is now presented to the user instead of a drop-down notification - Note: No possibility of creating multiple alarms at this point

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -41,7 +41,7 @@
             android:id="@+id/buttonCreateAlarm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onToggleClicked"
+            android:onClick="createNewAlarm"
             android:text="Create"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="407dp" />
