--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -9,6 +9,7 @@
          android:fitsSystemWindows. -->
 
     <FrameLayout
+        android:id="@+id/fullscreen_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
@@ -29,6 +30,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="onSilenceAlarm"
                 android:text="Silence Alarm" />
 
         </LinearLayout>
@@ -38,8 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
     </FrameLayout>
 
 </FrameLayout>
