--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
+    android:elevation="0dp"
     tools:context="csuchico.smartnap.AlarmDialog">
 
     <!-- This FrameLayout insets its children based on system windows using
@@ -12,6 +13,7 @@
         android:id="@+id/fullscreen_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="false"
         android:fitsSystemWindows="true"
         android:padding="10dp">
 
