--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -51,7 +51,7 @@
                 android:onClick="to_answer"
                 android:text="@string/this_will_be_the_question"
                 android:textSize="22sp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/fc_answer"
