--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,19 +10,21 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Alarm"
-        android:layout_marginStart="62dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginStart="62dp"
+        android:onClick="Alarmsetup"
+        android:text="Add Alarm"/>
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set Alarm"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="55dp"
         android:layout_toEndOf="@+id/button5"
-        android:layout_marginStart="55dp" />
+        android:onClick="GotoQuestion"
+        android:text="Questions"/>
 
         <ScrollView
             android:layout_width="match_parent"
