Still WIP on flash cards

--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -56,6 +56,7 @@
             android:id="@+id/buttonAddFlashCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="addFlashCard"
             android:text="@string/label_addFlashCard"/>
 
         <Button
